--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ footer {
     right: 20px;
 }
 .auto{
-    background-color: grey;
+    background-color: white;
     background-image: url(../assets/img/chau.jpg);
     width: 100%;
     height: 45rem;
@@ -280,7 +280,7 @@ footer {
     object-fit: cover;
 }
 
-/* Apliqué el Responsively en las páginas de Quienes somos y Turnos**/
+/* Apliqué el Responsively en las páginas de Home, Quienes somos y Turnos**/
 
 @media (max-width: 320px) {
     .turnos{
@@ -302,5 +302,10 @@ footer {
     .cardContainer{
         flex-direction: column;
         gap: .3125rem;
+    }
+}
+@media(max-width:1024px){
+    footer{
+        height: 150px;
     }
 }
