--- a/css/style.css
+++ b/css/style.css
@@ -298,8 +298,6 @@ footer {
     object-fit: cover;
 }
 
-/* Apliqué el Responsively en las páginas de Home, Quienes somos y Turnos**/
-
 @media (max-width: 320px) {
     .turnos{
         width: 85%;
@@ -326,4 +324,42 @@ footer {
     footer{
         height: 150px;
     }
+}
+.tarjeta{
+    background-color: #D2F1F3;
+    width: 700px;
+    height: 60px;
+    border: 2px solid rgba(0, 0, 0, 0.062);
+    border-radius: 1.25rem;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
+    font-family: 'calibri';
+    font-size: 16px;
+}
+.tarjeta h2{
+    justify-content: center;
+    display: flex;
+    padding-top: 14px;
+}
+.tarjeta div{
+    width: 100%;
+    height: 75%;
+}
+.tarjeta div img{
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+}
+.tarjeta:hover{
+    background-color: #0a86a533;
+    transform: scale(0.95);
+}
+.card-servicios{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3.4375rem;
+    align-items: flex-end;
+    padding-top: 80px;
+    padding-right: 40px;
 }
