--- a/css/style.css
+++ b/css/style.css
@@ -217,9 +217,14 @@ footer {
     width: 21.875rem;
     height: 31.25rem;
     border: 2px solid rgba(0, 0, 0, 0.062);
-    border-radius: 1.25rem;
+    border-radius: 50px;
     overflow: hidden;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
+    margin-top: 0;
+    align-items: center;
+    line-height: 30px;
+    text-align: center;
+    vertical-align: middle;
 }
 .card div{
     width: 100%;
@@ -227,7 +232,7 @@ footer {
 }
 .card div img{
     width: 100%;
-    height: 80%;
+    height: 70%;
     object-fit: cover;
 }
 .card:hover{
@@ -238,8 +243,11 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 3.4375rem;
+    gap: 3.75rem;
     align-items: center;
+    margin-top: 0;
+    font-family: 'calibri';
+    font-size: 16px;
 }
 
 .galeria{
@@ -298,33 +306,6 @@ footer {
     object-fit: cover;
 }
 
-@media (max-width: 320px) {
-    .turnos{
-        width: 85%;
-    }
-    .turnos .boton{
-        margin: 45px 0;
-    }
-    .cardContainer{
-        flex-direction: column;
-        gap: .3125rem;
-    }
-    .card{
-        width: 300px;
-        height: 400px;
-    }
-}
-@media(max-width: 425px){
-    .cardContainer{
-        flex-direction: column;
-        gap: .3125rem;
-    }
-}
-@media(max-width:1024px){
-    footer{
-        height: 150px;
-    }
-}
 .tarjeta{
     background-color: #D2F1F3;
     width: 700px;
@@ -362,4 +343,39 @@ footer {
     align-items: flex-end;
     padding-top: 80px;
     padding-right: 40px;
+}
+@media (max-width: 320px) {
+    .turnos{
+        width: 85%;
+    }
+    .turnos .boton{
+        margin: 45px 0;
+    }
+    .cardContainer{
+        flex-direction: column;
+        gap: .3125rem;
+    }
+    .card{
+        width: 300px;
+        height: 400px;
+    }
+}
+@media(max-width: 425px){
+    .cardContainer{
+        flex-direction: column;
+        gap: .3125rem;
+    }
+}
+@media(max-width:1024px){
+    .main{
+        height: 800px;
+    }
+    footer{
+        height: 150px;
+    }
+}
+@media(max-width:768px){
+    .main{
+        width: 100%;
+    }
 }
