--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ footer {
     text-decoration: none;
 }
 .turnos{
+    display: flex;
+    flex-wrap: wrap;
     width: 400px;
     background-color: rgb(70, 136, 212);
     padding: 30px;
@@ -346,7 +348,8 @@ footer {
 }
 @media (max-width: 320px) {
     .turnos{
-        width: 85%;
+        display: flex;
+        flex-wrap: wrap;
     }
     .turnos .boton{
         margin: 45px 0;
@@ -378,4 +381,10 @@ footer {
     .main{
         width: 100%;
     }
+}
+.error{
+    width: 100%;
+    background-image: url(../assets/img/error.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
