se sigue trabajando con sass

--- a/scss/vanzetti.scss
+++ b/scss/vanzetti.scss
@@ -1,1 +1,14 @@
-@import"./layout/footer"
+@import"./layout/footer";
+@import"./layout/header";
+@import"./layout/main-galeria";
+@import"./layout/main-quienes-somos";
+@import"./layout/main-servicios";
+@import"./layout/main-turnos";
+@import"./utilities/function";
+@import"./utilities/maps";
+@import"./utilities/mixins";
+@import"./utilities/variables";
+@import"./layout/media/query-320";
+@import"./layout/media/query-425";
+@import"./layout/media/query-768";
+@import"./layout/media/query-1024";
