--- a/css/style.css
+++ b/css/style.css
@@ -1,402 +1,368 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-header{
-    font-family: 'Barlow', sans-serif;
-    font-family: 'Gabarito', sans-serif;
-    font-family: 'Josefin Sans', sans-serif;
-    font-family: 'Kanit', sans-serif;
-    font-family: 'Nanum Gothic', sans-serif;
-}
-.nav-wrapper{
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-}
-.nav-wrapper li a:hover{
-    color: rgb(12, 147, 236);
-}
-.logo{
-    width: 180px;
-    height: 60px;
-}
-nav{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: lightblue;
-    padding: 1rem 1.5rem;
-}
-nav .logo{
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
-}
-nav ul{
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-}
-a{
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.767);
-}
-nav #toggle, nav label{
-    display: none;
-}
-@media(max-width:48rem){
-    nav .menu{
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-    }
-    nav ul{
-        flex-direction: column;
-        align-items: center;
-        padding: 0.5rem 0px;
-    }
-    nav label{
-        display: flex;
-        color: white;
-        cursor: pointer;
-    }
-    nav #toggle:checked ~ .menu{
-        height: 100%;
-    }
-}
-.main{
-    width: 100%;
-    height: 740px;
-    background-image: url(../assets/img/holaaa.jpg)
-}
-.main2{
-    padding: 123px;
-}
-.main3{
-    position: relative;
-    height: 120%;
-}
 footer {
-    display: flex;
-    flex-direction: column;
-    background-color: #181818;
-    padding: 30px;
-    font-family: 'calibri';
-}
-.subClass{
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    gap: 1.875rem;
-    color: white;
-    font-size: .75rem;
-}
-.subClass h2{
-    font-size: 1.25rem;
-    font-weight: bold;
-}
-.pie{
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-size: .9375rem;
-}
-.pie a{
-    color: blueviolet;
-    text-decoration: none;
-}
-.wpp{
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-}
-.auto{
-    background-color: white;
-    background-image: url(../assets/img/chau.jpg);
-    width: 100%;
-    height: 45rem;
-    background-position: 0%;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.auto h1{
-    text-align: right;
-    font-size: 2.1875rem;
-    text-decoration: none;
-}
-@keyframes shaking {
-    10%{
-        transform: scale(1.05) rotate(5deg);
-    }
-    20%{
-        transform: scale(1.05) rotate(-5deg);
-    }
-    30%{
-        transform: scale(1.05) rotate(5deg);
-    }
-    40%{
-        transform: none
-    }
-}
-.controls{
-    width: 100%;
-    background-color: white;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    border: 1px solid blue;
-    font-family: 'calibri';
-    font-size: 18px;
-}
-.galeria{
-    text-align: center;
-    text-decoration: underline;
-    font-size: 1.875rem;
-}
-.section-boton a{
-    background-color: khaki;
-    padding: 2.5rem;
-    padding-top: .0187rem;
-    padding-right: .625rem;
-    padding-bottom: .625rem;
-    padding-left: .625rem;
-    border: 2px solid lightblue;
-}
-.card{
-    width: 21.875rem;
-    height: 31.25rem;
-    border: 2px solid rgba(0, 0, 0, 0.062);
-    border-radius: 50px;
-    overflow: hidden;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
-    margin-top: 0;
-    align-items: center;
-    line-height: 30px;
-    text-align: center;
-    vertical-align: middle;
-}
-.card div{
-    width: 100%;
-    height: 55%;
-}
-.card div img{
-    width: 100%;
-    height: 90%;
-    object-fit: cover;
-}
-.card:hover{
-    background-color: #0a86a533;
-    transform: scale(0.95);
-}
-.cardContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 3.75rem;
-    align-items: center;
-    margin-top: 0;
-    font-family: 'calibri';
-    font-size: 16px;
-}
+  display: flex;
+  flex-direction: column;
+  background-color: #181818;
+  padding: 30px;
+  font-family: 'calibri'; }
 
-.galeria{
-    display: block;
-}
-.galeria img:hover{
-    background-color: #0a86a533;
-    transform: scale(1.03)
-}
+.subClass {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 1.875rem;
+  color: white;
+  font-size: .75rem; }
+
+.subClass h2 {
+  font-size: 1.25rem;
+  font-weight: bold; }
+
+.pie {
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: .9375rem; }
+
+.pie a {
+  color: blueviolet;
+  text-decoration: none; }
+
+.wpp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+header {
+  font-family: 'Barlow', sans-serif;
+  font-family: 'Gabarito', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Kanit', sans-serif;
+  font-family: 'Nanum Gothic', sans-serif; }
+
+.nav-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem; }
+
+.nav-wrapper li a:hover {
+  color: #0c93ec; }
+
+.logo {
+  width: 180px;
+  height: 60px; }
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightblue;
+  padding: 1rem 1.5rem; }
+
+nav .logo {
+  font-weight: 700;
+  text-decoration: none;
+  color: black; }
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 2rem; }
+
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.767); }
+
+nav #toggle, nav label {
+  display: none; }
+
+@media (max-width: 48rem) {
+  nav .menu {
+    width: 100%;
+    height: 0;
+    overflow: hidden; }
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 0px; }
+  nav label {
+    display: flex;
+    color: white;
+    cursor: pointer; }
+  nav #toggle:checked ~ .menu {
+    height: 100%; } }
+
+.main {
+  width: 100%;
+  height: 740px;
+  background-image: url(../assets/img/holaaa.jpg); }
+
+.main2 {
+  padding: 123px; }
+
+.main3 {
+  position: relative;
+  height: 120%; }
+
+.galeria {
+  display: block; }
+
+.galeria img:hover {
+  background-color: #0a86a533;
+  transform: scale(1.03); }
+
 .galeria2 {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: repeat(2, 12.5rem);
-    grid-template-areas:
-        "img1 img4 img3 img3 img2"
-        "img5 img5 img3 img3 img2"
-        "img5 img5 img3 img3 img2"
-        "img6 img6 img6 img6 img6"
-    ;
-}
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(2, 12.5rem);
+  grid-template-areas: "img1 img4 img3 img3 img2" "img5 img5 img3 img3 img2" "img5 img5 img3 img3 img2" "img6 img6 img6 img6 img6"; }
+
 .item1 {
-    grid-area: img1;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img1;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .item2 {
-    grid-area: img2;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img2;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .item3 {
-    grid-area: img3;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img3;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .item4 {
-    grid-area: img4;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img4;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .item5 {
-    grid-area: img5;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img5;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
+
 .item6 {
-    grid-area: img6;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  grid-area: img6;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
 
-.tarjeta{
-    background-color: #D2F1F3;
-    width: 700px;
-    height: 60px;
-    border: 2px solid rgba(0, 0, 0, 0.062);
-    border-radius: 1.25rem;
-    overflow: hidden;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
-    font-family: 'calibri';
-    font-size: 16px;
-}
-.tarjeta h2{
-    justify-content: center;
-    display: flex;
-    padding-top: 14px;
-}
-.tarjeta div{
-    width: 100%;
-    height: 75%;
-}
-.tarjeta div img{
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-}
-.tarjeta:hover{
-    background-color: #0a86a533;
-    transform: scale(0.95);
-}
-.card-servicios{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 3.4375rem;
-    align-items: flex-end;
-    padding-top: 80px;
-    padding-right: 40px;
-}
+.controls {
+  width: 100%;
+  background-color: white;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  border: 1px solid blue;
+  font-family: 'calibri';
+  font-size: 18px; }
+
+.galeria {
+  text-align: center;
+  text-decoration: underline;
+  font-size: 1.875rem; }
+
+.card {
+  width: 21.875rem;
+  height: 31.25rem;
+  border: 2px solid rgba(0, 0, 0, 0.062);
+  border-radius: 50px;
+  overflow: hidden;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
+  margin-top: 0;
+  align-items: center;
+  line-height: 30px;
+  text-align: center;
+  vertical-align: middle; }
+
+.card div {
+  width: 100%;
+  height: 55%; }
+
+.card div img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover; }
+
+.card:hover {
+  background-color: #0a86a533;
+  transform: scale(0.95); }
+
+.cardContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 3.75rem;
+  align-items: center;
+  margin-top: 0;
+  font-family: 'calibri';
+  font-size: 16px; }
+
+.tarjeta {
+  background-color: #D2F1F3;
+  width: 700px;
+  height: 60px;
+  border: 2px solid rgba(0, 0, 0, 0.062);
+  border-radius: 1.25rem;
+  overflow: hidden;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
+  font-family: 'calibri';
+  font-size: 16px; }
+
+.tarjeta h2 {
+  justify-content: center;
+  display: flex;
+  padding-top: 14px; }
+
+.tarjeta div {
+  width: 100%;
+  height: 75%; }
+
+.tarjeta div img {
+  width: 100%;
+  height: 80%;
+  object-fit: cover; }
+
+.tarjeta:hover {
+  background-color: #0a86a533;
+  transform: scale(0.95); }
+
+.card-servicios {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3.4375rem;
+  align-items: flex-end;
+  padding-top: 80px;
+  padding-right: 40px; }
+
+.main3 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+
+.main3-mapa {
+  width: 60%; }
+
+.main3-mapa iframe {
+  width: 100%; }
+
+.turnos {
+  width: 400px;
+  background-color: #4688d4;
+  padding: 30px;
+  margin-top: 100px;
+  border-radius: 4px;
+  font-family: 'calibri';
+  color: white;
+  box-shadow: 7px 13px 37px grey;
+  margin: auto; }
+
+.turnos h4 {
+  font-size: 22px;
+  margin-bottom: 20px; }
+
+.turnos p {
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 40px; }
+
+.turnos a {
+  color: white;
+  text-decoration: none; }
+
+.turnos a:hover {
+  color: white;
+  text-decoration: underline; }
+
+.turnos .button {
+  width: 100%;
+  background-color: blue;
+  border: none;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: shaking 3s infinite; }
+
+.auto {
+  background-color: white;
+  background-image: url(../assets/img/chau.jpg);
+  width: 100%;
+  height: 45rem;
+  background-position: 0%;
+  background-size: contain;
+  background-repeat: no-repeat; }
+
+.auto h1 {
+  text-align: right;
+  font-size: 2.1875rem;
+  text-decoration: none; }
+
+@keyframes shaking {
+  10% {
+    transform: scale(1.05) rotate(5deg); }
+  20% {
+    transform: scale(1.05) rotate(-5deg); }
+  30% {
+    transform: scale(1.05) rotate(5deg); }
+  40% {
+    transform: none; } }
+
+.section-boton a {
+  background-color: khaki;
+  padding: 2.5rem;
+  padding-top: .0187rem;
+  padding-right: .625rem;
+  padding-bottom: .625rem;
+  padding-left: .625rem;
+  border: 2px solid lightblue; }
+
 @media (max-width: 320px) {
-    .turnos{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .turnos .boton{
-        margin: 45px 0;
-    }
-    .cardContainer{
-        flex-direction: column;
-        gap: .3125rem;
-    }
-    .card{
-        width: 300px;
-        height: 400px;
-    }
-    .tarjeta{
-        width: 100%;
-        font-size: 10px;
-    }
-}
-@media(max-width: 425px){
-    .cardContainer{
-        flex-direction: column;
-        gap: .3125rem;
-    }
-}
-@media(max-width:1024px){
-    .main{
-        height: 800px;
-    }
-    footer{
-        height: 150px;
-    }
-    .turnos{
-        border-right: 200px;
-    }
-}
-@media(max-width:768px){
-    .main{
-        width: 100%;
-    }
-}
-.error{
-    width: 100%;
-    background-image: url(../assets/img/error.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.main3{
+  .turnos {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    
-}
-.main3-mapa{
-    width: 60%;
-}
-.main3-mapa iframe{
+    flex-wrap: wrap; }
+  .turnos .boton {
+    margin: 45px 0; }
+  .cardContainer {
+    flex-direction: column;
+    gap: .3125rem; }
+  .card {
+    width: 300px;
+    height: 400px; }
+  .tarjeta {
     width: 100%;
-}
-.turnos{
-    width: 400px;
-    background-color: rgb(70, 136, 212);
-    padding: 30px;
-    margin-top: 100px;
-    border-radius: 4px;
-    font-family: 'calibri';
-    color: white;
-    box-shadow: 7px 13px 37px grey;
-    margin: auto;
-}
-.turnos h4{
-    font-size: 22px;
-    margin-bottom: 20px;
-}
-.turnos p{
-    height: 40px;
-    text-align: center;
-    font-size: 18px;
-    line-height: 40px;
-}
-.turnos a{
-    color: white;
-    text-decoration: none
-}
-.turnos a:hover{
-    color: white;
-    text-decoration: underline;
+    font-size: 10px; } }
 
-}
-.turnos .button{
-    width: 100%;
-    background-color: blue;
-    border: none;
-    padding: 12px;
-    color: white;
-    margin: 16px 0;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: shaking 3s infinite;
-}
+@media (max-width: 425px) {
+  .cardContainer {
+    flex-direction: column;
+    gap: .3125rem; } }
+
+@media (max-width: 768px) {
+  .main {
+    width: 100%; } }
+
+@media (max-width: 1024px) {
+  .main {
+    height: 800px; }
+  footer {
+    height: 150px; }
+  .turnos {
+    border-right: 200px; } }
