--- a/scss/vanzetti.scss
+++ b/scss/vanzetti.scss
@@ -1,5 +1,6 @@
 @import"./layout/footer";
 @import"./layout/header";
+@import"./layout/index";
 @import"./layout/main-galeria";
 @import"./layout/main-quienes-somos";
 @import"./layout/main-servicios";
