se corrigio error en el SEO

--- a/scss/layout/_error404.scss
+++ b/scss/layout/_error404.scss
@@ -1,6 +1,6 @@
 .error{
     width: 100%;
-    background-image: url(../assets/img/error.jpg);
+    background-image: url(/assets/img/error.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
