--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,11 @@ nav #toggle, nav label {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, 12.5rem);
-  grid-template-areas: "img1 img4 img3 img3 img2" "img5 img5 img3 img3 img2" "img5 img5 img3 img3 img2" "img6 img6 img6 img6 img6"; }
+  grid-template-areas: 
+  "img1 img4 img3 img3 img2"
+ "img5 img5 img3 img3 img2"
+ "img5 img5 img3 img3 img2"
+ "img6 img6 img6 img6 img6"; }
 
 .item1 {
   grid-area: img1;
