--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,4 +1,6 @@
 .main {
     width: 100%;
     height: 740px;
-    background-image: url(../assets/img/holaaa.jpg); }
+    background-image: url(../assets/img/holaaa.jpg);
+}
+
