--- a/css/style.css
+++ b/css/style.css
@@ -121,11 +121,7 @@ nav #toggle, nav label {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, 12.5rem);
-  grid-template-areas: 
-  "img1 img4 img3 img3 img2"
- "img5 img5 img3 img3 img2"
- "img5 img5 img3 img3 img2"
- "img6 img6 img6 img6 img6"; }
+  grid-template-areas: "img1 img4 img3 img3 img2" "img5 img5 img3 img3 img2" "img5 img5 img3 img3 img2" "img6 img6 img6 img6 img6"; }
 
 .item1 {
   grid-area: img1;
@@ -361,7 +357,9 @@ nav #toggle, nav label {
 
 @media (max-width: 768px) {
   .main {
-    width: 100%; } }
+    width: 100%; }
+  .content-section {
+    flex-direction: column; } }
 
 @media (max-width: 1024px) {
   .main {
