--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 header{
     font-family: 'Barlow', sans-serif;
     font-family: 'Gabarito', sans-serif;
@@ -16,7 +11,7 @@ header{
     padding: 1rem;
 }
 .nav-wrapper li a:hover{
-    color: rgb(12, 147, 236);
+    color: #0c93ec;
 }
 .logo{
     width: 180px;
