--- a/scss/vanzetti.scss
+++ b/scss/vanzetti.scss
@@ -1,6 +1,7 @@
 @import"./layout/footer";
 @import"./layout/header";
 @import"./layout/index";
+@import"./base/reset";
 @import"./layout/main-galeria";
 @import"./layout/main-quienes-somos";
 @import"./layout/main-servicios";
