--- a/scss/layout/_main-galeria.scss
+++ b/scss/layout/_main-galeria.scss
@@ -1,3 +1,14 @@
+.main-galeria h1{
+    text-align: center;
+    font-size: 40px;
+    font-family:'calibri';
+    background-color: #0c93ec;
+}
+.galeria{
+    text-align: center;
+    text-decoration: underline;
+    font-size: 1.875rem;
+}
 .galeria{
     display: block;
 }
