--- a/scss/layout/_main-quienes-somos.scss
+++ b/scss/layout/_main-quienes-somos.scss
@@ -1,17 +1,11 @@
-.controls{
-    width: 100%;
-    background-color: white;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    border: 1px solid blue;
-    font-family: 'calibri';
-    font-size: 18px;
+.main2{
+    padding: 0;
 }
-.galeria{
+.main2 h1{
     text-align: center;
-    text-decoration: underline;
-    font-size: 1.875rem;
+    font-size: 40px;
+    font-family:'calibri';
+    background-color: #0c93ec;
 }
 .card{
     width: 21.875rem;
