--- a/scss/layout/_main-servicios.scss
+++ b/scss/layout/_main-servicios.scss
@@ -1,38 +1,30 @@
-.tarjeta{
-    background-color: #D2F1F3;
-    width: 700px;
-    height: 60px;
-    border: 2px solid rgba(0, 0, 0, 0.062);
-    border-radius: 1.25rem;
+.index-main h1{
+    text-align: center;
+    font-size: 40px;
+    font-family:'calibri';
+    background-color: #0c93ec;
+}
+.section-servicios{
+    width: 50%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
     overflow: hidden;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.151);
-    font-family: 'calibri';
-    font-size: 16px;
+    img{
+        width: 150px;
+        height: 200px;
+        gap: 2.5rem;
+        transform: skew(-10deg);
+        transition: 0.5s;
+        object-fit: cover;
+    }
+    img:hover{
+        transform: scale(1.1);
+    }
 }
-.tarjeta h2{
-    justify-content: center;
-    display: flex;
-    padding-top: 14px;
-}
-.tarjeta div{
-    width: 100%;
-    height: 75%;
-}
-.tarjeta div img{
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-}
-.tarjeta:hover{
-    background-color: #0a86a533;
-    transform: scale(0.95);
-}
-.card-servicios{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 3.4375rem;
-    align-items: flex-end;
-    padding-top: 80px;
-    padding-right: 40px;
+.section-servicios h1{
+    text-align: center;
+    background-color: red;
 }
