--- a/scss/layout/_main-galeria.scss
+++ b/scss/layout/_main-galeria.scss
@@ -8,6 +8,7 @@
     text-align: center;
     text-decoration: underline;
     font-size: 1.875rem;
+    padding-top: 30px;
 }
 .galeria{
     display: block;
