--- a/scss/layout/_main-galeria.scss
+++ b/scss/layout/_main-galeria.scss
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 40px;
     font-family:'calibri';
-    background-color: #0c93ec;
+    background-color: #0c92ec38;
 }
 .galeria{
     text-align: center;
