--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -22,7 +22,7 @@ nav{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    background-color: lightblue;
+    background-color: #add8e6;
     padding: 1rem 1.5rem;
 }
 nav .logo{
