--- a/scss/layout/_main-quienes-somos.scss
+++ b/scss/layout/_main-quienes-somos.scss
@@ -5,7 +5,7 @@
     text-align: center;
     font-size: 40px;
     font-family:'calibri';
-    background-color: #0c93ec;
+    background-color: #0c92ec38;
 }
 .card{
     width: 21.875rem;
