--- a/scss/layout/_main-servicios.scss
+++ b/scss/layout/_main-servicios.scss
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 40px;
     font-family:'calibri';
-    background-color: #0c93ec;
+    background-color: #0c92ec38;
 }
 .section-servicios{
     width: 55%;
@@ -25,8 +25,23 @@
     }
     padding-top: 20px;
     padding-bottom: 20px;
+    h2{
+        color: #1489b1;
+        font-family: 'calibri';
+        font-size: 25px;
+    }
+    p{
+        font-family: 'calibri';
+        font-size: 20px;
+    }
 }
-.section-servicios h1{
-    text-align: center;
-    background-color: red;
+@keyframes show {
+    from{
+        opacity: 0;
+        scale: 25%;
+    }
+    to{
+        opacity: 1;
+        scale: 100%;
+    }
 }
