--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,6 +1,5 @@
-@mixin flex($direction,$wrap,$justify,$align,$gap){
+@mixin flex($wrap,$justify,$align,$gap){
     display: flex;
-    flex-direction: $direction;
     flex-wrap: $wrap;
     justify-content: $justify;
     align-items: $align;
