--- a/css/style.css
+++ b/css/style.css
@@ -43,31 +43,29 @@ header {
   width: 100%;
   margin: 0 auto;
   padding: 1rem; }
+  .nav-wrapper nav {
+    background-color: #add8e6;
+    padding: 1rem 1.5rem; }
+    .nav-wrapper nav #toggle, .nav-wrapper nav nav label {
+      display: none; }
+    .nav-wrapper nav .logo {
+      width: 180px;
+      height: 60px;
+      font-weight: 700;
+      text-decoration: none;
+      color: black; }
+    .nav-wrapper nav .menu ul {
+      list-style: none;
+      display: flex;
+      gap: 2rem; }
+      .nav-wrapper nav .menu ul li a:hover {
+        color: #0c93ec; }
+        .nav-wrapper nav .menu ul li a:hover a {
+          text-decoration: none;
+          color: rgba(0, 0, 0, 0.767); }
 
 .nav-wrapper li a:hover {
   color: #0c93ec; }
-
-.logo {
-  width: 180px;
-  height: 60px; }
-
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #add8e6;
-  padding: 1rem 1.5rem; }
-
-nav .logo {
-  font-weight: 700;
-  text-decoration: none;
-  color: black; }
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 2rem; }
 
 a {
   text-decoration: none;
@@ -387,6 +385,13 @@ nav #toggle, nav label {
   border: 1px solid blue;
   font-family: 'calibri';
   font-size: 18px; }
+
+.error-404 {
+  display: flex;
+  font-size: 100px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 350px; }
 
 @media (max-width: 320px) {
   .turnos {
