--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,32 +9,39 @@ header{
     width: 100%;
     margin: 0 auto;
     padding: 1rem;
+    nav{
+        background-color: #add8e6;
+        padding: 1rem 1.5rem;
+        #toggle, nav label{
+            display: none;
+        }
+        .logo{
+            width: 180px;
+            height: 60px;
+            font-weight: 700;
+            text-decoration: none;
+            color: black;
+        }
+        .menu {
+            ul{
+                list-style: none;
+                display: flex;
+                gap: 2rem;
+                li a:hover{
+                    color: #0c93ec;
+                    a{
+                        text-decoration: none;
+                        color: rgba(0, 0, 0, 0.767)
+                    }
+                }
+            }
+        }
+    }
 }
 .nav-wrapper li a:hover{
     color: #0c93ec;
 }
-.logo{
-    width: 180px;
-    height: 60px;
-}
-nav{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #add8e6;
-    padding: 1rem 1.5rem;
-}
-nav .logo{
-    font-weight: 700;
-    text-decoration: none;
-    color: black;
-}
-nav ul{
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-}
+
 a{
     text-decoration: none;
     color: rgba(0, 0, 0, 0.767);
