--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin flex($wrap,$justify,$align,$gap){
+@mixin flex($direction,$wrap,$justify,$align,$gap){
     display: flex;
     flex-wrap: $wrap;
     justify-content: $justify;
