--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,6 +10,10 @@ header{
     margin: 0 auto;
     padding: 1rem;
     nav{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
         background-color: #add8e6;
         padding: 1rem 1.5rem;
         #toggle, nav label{
