--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,5 +1,6 @@
 @mixin flex($direction,$wrap,$justify,$align,$gap){
     display: flex;
+    flex-direction: $direction;
     flex-wrap: $wrap;
     justify-content: $justify;
     align-items: $align;
