--- a/scss/layout/_main-galeria.scss
+++ b/scss/layout/_main-galeria.scss
@@ -1,8 +1,8 @@
 .main-galeria h1{
     text-align: center;
     font-size: 40px;
-    font-family:'calibri';
-    background-color: #0c92ec38;
+    font-family:map-get($font , calibri );
+    background-color: map-get($color , celeste );
 }
 .galeria{
     text-align: center;
