--- a/scss/layout/_main-quienes-somos.scss
+++ b/scss/layout/_main-quienes-somos.scss
@@ -4,8 +4,8 @@
 .main2 h1{
     text-align: center;
     font-size: 40px;
-    font-family:'calibri';
-    background-color: #0c92ec38;
+    font-family:map-get($font , calibri );
+    background-color: map-get($color , celeste );
 }
 .card{
     width: 21.875rem;
