--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,7 +14,7 @@ header{
         background-color: #add8e6;
         padding: 1rem 1.5rem;
         #toggle, label{
-            display: none;
+            display: block;
         }
         .logo{
             width: 180px;
