--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header {
     background-color: #add8e6;
     padding: 1rem 1.5rem; }
     .nav-wrapper nav #toggle, .nav-wrapper nav label {
-      display: none; }
+      display: block; }
     .nav-wrapper nav .logo {
       width: 180px;
       height: 60px;
@@ -403,18 +403,62 @@ header {
     height: 400px; }
   .tarjeta {
     width: 100%;
-    font-size: 10px; } }
+    font-size: 10px; }
+  .section-servicios {
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 98%;
+    border-left: 10px; }
+  .section-servicios img {
+    width: 140px;
+    height: 180px; }
+  .section-servicios h2 {
+    font-size: 20px;
+    margin-left: -10px;
+    margin-right: -10px; }
+  .section-servicios p {
+    font-size: 15px;
+    justify-content: center; }
+  .footer .subClass h2 {
+    align-items: center;
+    justify-content: center;
+    font-size: 16px; }
+  .footer .pie {
+    font-size: 11px;
+    align-items: center;
+    justify-content: center; }
+  .turnos p {
+    font-size: 14px; } }
 
 @media (max-width: 425px) {
   .cardContainer {
     flex-direction: column;
-    gap: .3125rem; } }
+    gap: .3125rem; }
+  .section-servicios {
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 98%;
+    border-left: 10px; }
+  .section-servicios img {
+    width: 140px;
+    height: 180px; }
+  .section-servicios h2 {
+    font-size: 20px;
+    margin-left: -10px;
+    margin-right: -10px; }
+  .section-servicios p {
+    font-size: 15px;
+    justify-content: center; } }
 
 @media (max-width: 768px) {
   .main {
     width: 100%; }
   .content-section {
-    flex-direction: column; } }
+    flex-direction: column; }
+  .main3-mapa {
+    width: 100%; } }
 
 @media (max-width: 1024px) {
   .main {
@@ -422,4 +466,7 @@ header {
   footer {
     height: 150px; }
   .turnos {
-    border-right: 200px; } }
+    border-right: 200px; }
+  .error-404 h1 {
+    font-size: 65px;
+    padding-top: 0; } }
