--- a/scss/layout/media/_query-320.scss
+++ b/scss/layout/media/_query-320.scss
@@ -18,4 +18,39 @@
         width: 100%;
         font-size: 10px;
     }
+    .section-servicios{
+        margin: 0;
+        padding: 10px;
+        box-sizing: border-box;
+        width: 98%;
+        border-left: 10px;
+    }
+    .section-servicios img{
+        width: 140px;
+        height: 180px;
+    }
+    .section-servicios h2{
+        font-size: 20px;
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+    .section-servicios p{
+        font-size: 15px;
+        justify-content: center;
+    }
+    .footer{
+        .subClass h2{
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+        }
+        .pie{
+            font-size: 11px;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    .turnos p{
+        font-size: 14px;
+    }
 }
