--- a/scss/layout/media/_query-425.scss
+++ b/scss/layout/media/_query-425.scss
@@ -23,4 +23,13 @@
         font-size: 15px;
         justify-content: center;
     }
+    .contenedor{
+        text-align: center;
+    }
+    .wpp-imagen{
+        height: 100px;
+        width: 100px;
+        padding-bottom: 10px;
+        margin-left: 110px;
+    }
 }
