--- a/scss/layout/media/_query-768.scss
+++ b/scss/layout/media/_query-768.scss
@@ -8,4 +8,14 @@
     .main3-mapa{
         width: 100%;
     }
+    .contenedor{
+        text-align: center;
+        display: flex;
+    }
+    .wpp-imagen{
+        height: 100px;
+        width: 100px;
+        padding-bottom: 10px;
+        margin-left: 110px;
+    }
 }
