--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -64,3 +64,9 @@
 .itemCarrouselArrows > a > i{
     color: white;
 }
+.home-icon{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
