--- a/scss/layout/media/_query-1024.scss
+++ b/scss/layout/media/_query-1024.scss
@@ -12,4 +12,8 @@
         font-size: 65px;
         padding-top: 0;
     }
+    .home-icon{
+        padding-top: 95px;
+        padding-bottom: 95px;
+    }
 }
