--- a/scss/layout/media/_query-425.scss
+++ b/scss/layout/media/_query-425.scss
@@ -32,4 +32,8 @@
         padding-bottom: 10px;
         margin-left: 110px;
     }
+    .icon-home{
+        width: 250px;
+        height: 130px;
+    }
 }
